--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">unicio</a></li>
+                <li><a href="/reserva.html">unicio</a></li>
                 <li><a href="#">unicio</a></li>
                 <li><a href="#">unicio</a></li>
                 <li><a href="#">unicio</a></li>
