--- a/.html/index.html
+++ b/.html/index.html
@@ -9,10 +9,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/reserva.html">unicio</a></li>
-                <li><a href="#">unicio</a></li>
-                <li><a href="#">unicio</a></li>
-                <li><a href="#">unicio</a></li>
+                <li><a href="/index.html">INICIO</a></li>
+                <li><a href="/reserva.html">RECERVAS</a></li>
+                <li><a href="/index.html">unicio</a></li>
+                <li><a href="/index.html">unicio</a></li>
             </ul>
             <h1></h1>
             
