PRUEVA DE XAMPP CON REGISTROS

--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <script src="index.js " defer></script>
     <title>tatis</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="/index.html">INICIO</a></li>
-                <li><a href="/reserva.html">RECERVAS</a></li>
-                <li><a href="/index.html">unicio</a></li>
-                <li><a href="/index.html">unicio</a></li>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="recerva.html">RECERVAS</a></li>
+                <li><a href="registro.html">REGISTRO</a></li>
+                <li><a href="index.html">unicio</a></li>
             </ul>
             <h1></h1>
             
