--- a/recerva.html
+++ b/recerva.html
@@ -21,7 +21,7 @@
             <input type="time" id="hora" name="hora" required>
 
             <label for="cancha"></label>
-            <select id="cancha" name="cancha" aria-placeholder="CANCHA" required>
+            <select id="cancha" name="cancha" class="canchas" required>
                 <option value="1">CANCHA 1</option>
                 <option value="2">CANCHA 2</option>
                 <option value="3">CANCHA 3</option>
