--- a/registro.html
+++ b/registro.html
@@ -3,40 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>REGISTRO E INICIO DE SESIÓN</title>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="registro.css">
-    <script src="registro.js " defer></script>
+    <script src="registro.js" defer></script>
 </head>
 <body>
     <main>
-    <div class="todo">
-        <div class="caja_inicio">
-            <div class="caja_sesion">
-                <h2>¿YA TIENES UNA CUENTA?</h2>
-                <input type="button" value="INICIAR SESIÓN" onclick="iniciar_sesion()">
+        <div class="todo">
+            <div class="caja_inicio">
+                <div class="caja_sesion">
+                    <h2>¿YA TIENES UNA CUENTA?</h2>
+                    <input type="button" value="INICIAR SESIÓN" onclick="iniciar_sesion()">
+                </div>
+                <div class="caja_registro">
+                    <h2>¿AUN NO TIENES UNA CUENTA?</h2>
+                    <input type="button" value="REGISTRARSE" onclick="registro_s()">
+                </div>
             </div>
-            <div class="caja_registro">
-                <h2>¿AUN NO TIENES UNA CUENTA?</h2>
-                <input type="button" value="REGISTRARSE" onclick="registro_s()">
+            <div class="caja_registros">
+                <!-- Formulario de Iniciar Sesión -->
+                <form id="inicioForm" class="inicio">
+                    <h2>INICIAR SESIÓN</h2>
+                    <input type="email" id="correoInicio" name="correo" placeholder="CORREO ELECTRONICO" required>
+                    <input type="password" id="contraseñaInicio" name="contraseña" placeholder="CONTRASEÑA" required>
+                    <input type="submit" value="INICIAR SESIÓN">
+                </form>
+
+                <!-- Formulario de Registro -->
+                <form id="registroForm" class="registro">
+                    <h2>REGISTRARSE</h2>
+                    <input type="text" id="nombreRegistro" name="nombre" placeholder="NOMBRE" required>
+                    <input type="email" id="correoRegistro" name="correo" placeholder="CORREO ELECTRONICO" required>
+                    <input type="password" id="contraseñaRegistro" name="contraseña" placeholder="CONTRASEÑA" required>
+                    <input type="submit" value="REGISTRARSE">
+                </form>
             </div>
         </div>
-        <div class="caja_registros">
-            <form action="iniciar_sesion.php" method="POST" class="inicio">
-                <h2>INICIAR SESIÓN</h2>
-                <input type="email" name="correo" placeholder="CORREO ELECTRONICO" required>
-                <input type="password" name="contraseña" placeholder="CONTRASEÑA" required>
-                <input type="submit" value="INICIAR SESIÓN">
-            </form>
-            <form action="registro.php" method="POST" class="registro">
-                <h2>REGISTRARSE</h2>
-                <input type="text" name="nombre" placeholder="NOMBRE" required>
-                <input type="email" name="correo" placeholder="CORREO ELECTRONICO" required>
-                <input type="password" name="contraseña" placeholder="CONTRASEÑA" required>
-                <input type="submit" value="REGISTRARSE">
-            </form>
-        </div>
-    </div>
+        <div id="resultado"></div> <!-- Mostrar resultado del registro/inicio -->
     </main>
 </body>
 </html>
