--- a/registro.html
+++ b/registro.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>REGISTRO E INICIO DE SESIÓN</title>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+    <title>Registro e Inicio de Sesión</title>
     <link rel="stylesheet" href="registro.css">
+    <script src="app.js" defer></script>
     <script src="registro.js" defer></script>
 </head>
 <body>
@@ -17,7 +16,7 @@
                     <input type="button" value="INICIAR SESIÓN" onclick="iniciar_sesion()">
                 </div>
                 <div class="caja_registro">
-                    <h2>¿AUN NO TIENES UNA CUENTA?</h2>
+                    <h2>¿AÚN NO TIENES UNA CUENTA?</h2>
                     <input type="button" value="REGISTRARSE" onclick="registro_s()">
                 </div>
             </div>
@@ -25,7 +24,7 @@
                 <!-- Formulario de Iniciar Sesión -->
                 <form id="inicioForm" class="inicio">
                     <h2>INICIAR SESIÓN</h2>
-                    <input type="email" id="correoInicio" name="correo" placeholder="CORREO ELECTRONICO" required>
+                    <input type="email" id="correoInicio" name="correo" placeholder="CORREO ELECTRÓNICO" required>
                     <input type="password" id="contraseñaInicio" name="contraseña" placeholder="CONTRASEÑA" required>
                     <input type="submit" value="INICIAR SESIÓN">
                 </form>
@@ -34,13 +33,13 @@
                 <form id="registroForm" class="registro">
                     <h2>REGISTRARSE</h2>
                     <input type="text" id="nombreRegistro" name="nombre" placeholder="NOMBRE" required>
-                    <input type="email" id="correoRegistro" name="correo" placeholder="CORREO ELECTRONICO" required>
+                    <input type="email" id="correoRegistro" name="correo" placeholder="CORREO ELECTRÓNICO" required>
                     <input type="password" id="contraseñaRegistro" name="contraseña" placeholder="CONTRASEÑA" required>
                     <input type="submit" value="REGISTRARSE">
                 </form>
             </div>
-        </div>
-        <div id="resultado"></div> <!-- Mostrar resultado del registro/inicio -->
+        </div><br><br><br>
+        <div id="resultado" style="text-align: center;"></div> <!-- Mostrar resultado del registro/inicio -->
     </main>
 </body>
 </html>
