--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">INICIO</a></li>
-                <li><a href="recerva.html">RECERVAS</a></li>
+                <li><a href="recerva.html">RESERVAS</a></li>
                 <li><a href="registro.html">REGISTRO</a></li>
                 <li><a href="index.html">unicio</a></li>
             </ul>
