--- a/registro.html
+++ b/registro.html
@@ -21,15 +21,12 @@
                 </div>
             </div>
             <div class="caja_registros">
-                <!-- Formulario de Iniciar Sesión -->
                 <form id="inicioForm" class="inicio">
                     <h2>INICIAR SESIÓN</h2>
                     <input type="email" id="correoInicio" name="correo" placeholder="CORREO ELECTRÓNICO" required>
                     <input type="password" id="contraseñaInicio" name="contraseña" placeholder="CONTRASEÑA" required>
                     <input type="submit" value="INICIAR SESIÓN">
                 </form>
-
-                <!-- Formulario de Registro -->
                 <form id="registroForm" class="registro">
                     <h2>REGISTRARSE</h2>
                     <input type="text" id="nombreRegistro" name="nombre" placeholder="NOMBRE" required>
@@ -38,8 +35,8 @@
                     <input type="submit" value="REGISTRARSE">
                 </form>
             </div>
-        </div><br><br><br>
-        <div id="resultado" style="text-align: center;"></div> <!-- Mostrar resultado del registro/inicio -->
+        </div>
+        <div id="resultado" style="text-align: center;"></div>
     </main>
 </body>
 </html>
