--- a/registro.html
+++ b/registro.html
@@ -36,7 +36,7 @@
                 </form>
             </div>
         </div>
-        <div id="resultado" class="resultado" "></div>
+        <div id="resultado" style="text-align: center;"></div>
     </main>
 </body>
 </html>
