cambio de nombres

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">INICIO</a></li>
-                <li><a href="recerva.html">RESERVAS</a></li>
-                <li><a href="registro.html">REGISTRO</a></li>
-                <li><a href="index.html">unicio</a></li>
-            </ul>
-            <h1></h1>
-            
-        </nav>
-    </header>
+            <nav>
+                <h1><a href="index.html">SoccerBook</a></h1>
+                <ul>
+                    <a href="index.html">INICIO</a>
+                    <a href="reserva.html">RESERVAS</a>
+                    <a href="#">CONTACTO</a>
+                    <a href="registro.html">REGISTRATE</a>
+                    <a href="registro.html">INICIAR SESION</a>
+                </ul>
+            </nav>
+        </header>
 </body>
 </html>
 
