--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
     <title>tatis</title>
 </head>
 <body>
-        <header>
-            <nav>
-                <h1><a href="index.html">SoccerBook</a></h1>
-                <ul>
-                    <a href="index.html">INICIO</a>
-                    <a href="reserva.html">RESERVAS</a>
-                    <a href="#">CONTACTO</a>
-                    <a href="registro.html">REGISTRATE</a>
-                    <a href="registro.html">INICIAR SESION</a>
-                </ul>
-            </nav>
-        </header>
+    <nav>
+        <h1><a href="index.html">SoccerBook</a></h1>
+        <ul>
+            <label for="text"><img src="/images/lupa.png" alt="lupa"><a href="index.js"><b>buscar</b></label>
+            <a href="index.html">INICIO</a>
+            <a href="reserva.html">RESERVAS</a>
+            <a href="#">CONTACTO</a>
+            <a href="registro.html" class="sesion">INICIAR SESION</a>
+            <a href="#" class="menu">=</a>
+        </ul>
+    </nav>
 </body>
 </html>
 
