--- a/registro.html
+++ b/registro.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro e Inicio de Sesión</title>
     <link rel="stylesheet" href="registro.css">
     <script src="app.js" defer></script>
@@ -39,7 +40,8 @@
                 </form>
             </div>
         </div><br><br><br>
-        <div id="resultado" style="text-align: center;"></div> <!-- Mostrar resultado del registro/inicio -->
+        <div id="resultado"></div>
+         <!-- Mostrar resultado del registro/inicio -->
     </main>
 </body>
 </html>
