--- a/reserva.html
+++ b/reserva.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservas de Canchas de Fútbol</title>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="recerva.css">
+    <link rel="stylesheet" href="reserva.css">
     <script src="recerva" defer></script>
 </head>
 <body>
