--- a/index.html
+++ b/index.html
@@ -5,23 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Advent+Pro:ital,wght@0,100..900;1,100..900&family=Agdasima:wght@400;700&family=Concert+One&family=Poppins&family=Rajdhani&display=swap" rel="stylesheet">
-    <script src="index.js " defer></script>
-    <title>tatis</title>
+    <script src="index.js" defer></script>
+    <title>SoccerBook</title>
 </head>
 <body>
     <nav>
         <h1><a href="index.html">SoccerBook</a></h1>
         <ul>
-            <label for="text"><img src="/images/lupa.png" alt="lupa"><a href="index.js"><b>buscar</b></label>
-            <a href="index.html">INICIO</a>
-            <a href="reserva.html">RESERVAS</a>
-            <a href="#">CONTACTO</a>
-            <a href="registro.html" class="sesion">INICIAR SESION</a>
-            <a href="#" class="menu">=</a>
+            <li>
+                <label for="search">
+                    <img src="/images/lupa.png" alt="lupa">
+                    <b>Buscar</b>
+                </label>
+                <input type="text" id="search">
+            </li>
+            <li><a href="index.html">INICIO</a></li>
+            <li><a href="reserva.html">RESERVAS</a></li>
+            <li><a href="#">CONTACTO</a></li>
+            <li><a href="registro.html" class="sesion">INICIAR SESIÓN</a></li>
+            <li><a href="#" class="menu">=</a></li>
         </ul>
     </nav>
 </body>
 </html>
+
 
 
 
