--- a/logout.html
+++ b/logout.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cierre de Sesión</title>
-    <link rel="stylesheet" href="logout.css">
+    <link rel="stylesheet" href="logout.html">
     <script src="logout.js" defer></script>
 </head>
 <body>
     <div class="container">
         <h1>Has cerrado sesión</h1>
         <p>Gracias por usar nuestro servicio. Esperamos verte de nuevo pronto.</p>
-        <p>Serás redirigido a la página de inicio en <span id="countdown">20</span> segundos.</p>
-        <a href="registro.html">Iniciar sesión nuevamente</a>
+        <p>Serás redirigido a la página de inicio en <span id="countdown">10</span> segundos</p>
+        <a href="#" id="reloginButton">Iniciar sesión nuevamente</a>
         <button onclick="window.location.href='index.html'">Regresar ahora</button>
-        <p>Tu opinión es importante para nosotros.  <br> <br><a href="feedback.html">Déjanos tus comentarios aquí.</a></p>
+        <p>Tu opinión es importante para nosotros. <a href="feedback.html">Déjanos tus comentarios aquí.</a></p>
         <p>Síguenos en nuestras redes sociales:</p>
-        <a href="https://facebook.com">Facebook</a> |  <br> <br>
-        <a href="https://twitter.com">Twitter</a> <br> <br>
-        <img src="logout-icon.png" alt="Cierre de sesión" >
+        <a href="https://facebook.com">Facebook</a> | 
+        <a href="https://twitter.com">Twitter</a>
+        <img src="logout-icon.png" alt="Cierre de sesión" class="imag">
     </div>
     
 </body>
