--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>SoccerBook</title>
 </head>
 <body>
+    <!-- Menú de navegación -->
     <nav>
         <h1><a href="index.html">SoccerBook</a></h1>
         <ul>
@@ -20,22 +21,73 @@
                 <input type="text" id="search">
             </li>
             <li><a href="index.html">INICIO</a></li>
-            <li><a href="reserva.html">RESERVAS</a></li>
+            <li><a href="registro.html">RESERVAS</a></li>
             <li><a href="#">CONTACTO</a></li>
             <li><a href="registro.html" class="sesion">INICIAR SESIÓN</a></li>
             <li><a href="#" class="menu">=</a></li>
         </ul>
     </nav>
+
+    <!-- Sección Principal (Hero) -->
+    <section class="hero">
+        <h2>Bienvenidos a SoccerBook</h2>
+        <p>Reserva tu cancha favorita en minutos</p>
+        <a href="registro.html" class="btn">Reserva Ahora</a>
+    </section>
+
+    <!-- Sección de Características -->
+    <section class="features">
+        <div class="feature-item" data-animate="fade-in">
+            <img src="/images/cancha.png" alt="Cancha">
+            <h3>Rápido y Fácil</h3>
+            <p>Reserva en solo unos pasos.</p>
+        </div>
+        <div class="feature-item" data-animate="fade-in">
+            <img src="/images/calendario.png" alt="Calendario">
+            <h3>Disponibilidad en Tiempo Real</h3>
+            <p>Consulta las canchas disponibles.</p>
+        </div>
+        <div class="feature-item" data-animate="fade-in">
+            <img src="/images/mapa.png" alt="Mapa">
+            <h3>Encuentra Canchas Cercanas</h3>
+            <p>Busca canchas cerca de tu ubicación.</p>
+        </div>
+    </section>
+
+    <!-- Testimonios -->
+    <section class="testimonials">
+        <h2>Lo que dicen nuestros usuarios</h2> <br>
+        <div class="testimonial visible" data-animate="slide-in">
+            <p>"¡La mejor forma de reservar una cancha, fácil y rápido!"</p>
+            <p>- Juan Pérez</p>
+        </div>
+        <div class="testimonial" data-animate="slide-in">
+            <p>"Excelente plataforma, siempre encuentro la cancha que necesito."</p>
+            <p>- María García</p>
+        </div>
+        <div class="testimonial" data-animate="slide-in">
+            <p>"Me encanta lo fácil que es gestionar reservas desde mi móvil."</p>
+            <p>- Carlos Rodríguez</p>
+        </div>
+    </section>
+    
+    <!-- Llamada a la Acción (CTA) -->
+    <section class="cta">
+        <h2>¿Listo para jugar?</h2> <br>
+        <a href="registro.html" class="btn">Regístrate Ahora</a>
+    </section>
+
+    <!-- Pie de Página -->
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2024 SoccerBook. Todos los derechos reservados.</p>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="registro.html">Reservas</a></li>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="registro.html">Iniciar Sesión</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
