--- a/logout.html
+++ b/logout.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Advent+Pro:ital,wght@0,100..900;1,100..900&family=Agdasima:wght@400;700&family=Concert+One&family=Poppins&family=Rajdhani&display=swap" rel="stylesheet">
     <title>Cierre de Sesión</title>
     <link rel="stylesheet" href="logout.html">
     <script src="logout.js" defer></script>
