--- a/usuario.html
+++ b/usuario.html
@@ -4,26 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservas de Canchas de Fútbol</title>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Advent+Pro:ital,wght@0,100..900;1,100..900&family=Agdasima:wght@400;700&family=Concert+One&family=Poppins&family=Rajdhani&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="usuario.css"> <!-- Vincula tu archivo CSS -->
     <script src="usuario.js" defer></script> <!-- Vincula tu archivo JavaScript -->
 </head>
 <body>
     <!-- Encabezado -->
-    <header>
-        <nav>
-            <a href="index.html"><img src="logo.png" alt="Logo del Sitio"></a>
-            <ul>
-                <li><a href="reserva.html">RESERVAR CANCHAS</a></li>
-                <li><a href="mis_reservas.html">MIS RECERVAS</a></li>
-                <li><a href="perfil.html">PERFIL</a></li>
-                <li><a href="logout.html">CERRAR SECCIÓN</a></li>
-            </ul>
-        </nav>
-    </header>
+    <nav>
+        <h1><a href="index.html">SoccerBook</a></h1>
+        <ul>
+            <li><a href="perfil.html">PERFIL</a></li>
+            <li><a href="reserva.html">RESERVAR CANCHAS</a></li>
+            <li><a href="mis_reservas.html">MIS RESERVAS</a></li>
+            <li><a href="logout.html"><button>CERRAR SESIÓN</button></a></li>        
+        </ul>
+    </nav>
 
     <!-- Sección de búsqueda de canchas -->
     <section>
-        <h2>Buscar Cancha Disponible</h2>
+        <h2>Buscar </h2>
         <form action="buscar_canchas.html" method="GET">
             <label for="ubicacion">Ubicación:</label>
             <input type="text" id="ubicacion" name="ubicacion" placeholder="Ciudad o área">
@@ -44,7 +43,9 @@
     <!-- Mapa interactivo -->
     <section>
         <h2>Ubicación de las Canchas Disponibles</h2>
-        <div id="map"></div>
+        <div id="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d55026.80795627788!2d-75.19467560528507!3d4.4232544357119306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scanchas%20ibague!5e0!3m2!1ses-419!2sco!4v1727123063032!5m2!1ses-419!2sco" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </section>
 
     <!-- Calendario interactivo -->
@@ -59,13 +60,13 @@
         <div class="cancha" id="cancha1">
             <h3>Cancha 1 - Fútbol 5</h3>
             <p>Ubicación: Centro Deportivo XYZ</p>
-            <p>Precio: $50/hora</p>
+            <p>Precio: $50k/hora</p>
             <button onclick="reservarCancha(1)">Reservar</button>
         </div>
         <div class="cancha" id="cancha2">
             <h3>Cancha 2 - Fútbol 7</h3>
             <p>Ubicación: Polideportivo ABC</p>
-            <p>Precio: $70/hora</p>
+            <p>Precio: $70k/hora</p>
             <button onclick="reservarCancha(2)">Reservar</button>
         </div>
     </section>
@@ -106,11 +107,11 @@
         <h2>Perfil de Usuario</h2>
         <form action="actualizar_perfil.html" method="POST">
             <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" name="nombre" value="Usuario Ejemplo">
+            <input type="text" id="nombre" name="nombre" placeholder="Usuario Ejemplo">
             <label for="email">Correo electrónico:</label>
-            <input type="email" id="email" name="email" value="usuario@ejemplo.com">
+            <input type="email" id="email" name="email" placeholder="usuario@ejemplo.com">
             <label for="telefono">Teléfono:</label>
-            <input type="tel" id="telefono" name="telefono" value="1234567890">
+            <input type="tel" id="telefono" name="telefono" placeholder="0000000000">
             <button type="submit">Actualizar Datos</button>
         </form>
     </section>
@@ -120,11 +121,11 @@
         <h2>Realizar Pago de Reserva</h2>
         <form action="/procesar_pago" method="POST">
             <label for="numero_tarjeta">Número de Tarjeta:</label>
-            <input type="text" id="numero_tarjeta" name="numero_tarjeta" placeholder="1234 5678 9101 1121">
+            <input type="text" id="numero_tarjeta" name="numero_tarjeta" placeholder="0000 0000 0000 0000">
             <label for="expiracion">Fecha de Expiración:</label>
             <input type="text" id="expiracion" name="expiracion" placeholder="MM/AA">
             <label for="cvv">CVV:</label>
-            <input type="text" id="cvv" name="cvv" placeholder="123">
+            <input type="text" id="cvv" name="cvv" placeholder="000">
             <button type="submit">Pagar</button>
         </form>
     </section>
