--- a/USUARIO/LOGOUT/logout.html
+++ b/USUARIO/LOGOUT/logout.html
@@ -14,7 +14,7 @@
         <p>Gracias por usar nuestro servicio. Esperamos verte de nuevo pronto.</p>
         <p>Serás redirigido a la página de inicio en <span id="countdown">10</span> segundos</p>
         <a href="#" id="reloginButton">Iniciar sesión nuevamente</a>
-        <button onclick="window.location.href='index.html'">Regresar ahora</button>
+        <button onclick="window.location.href='/INDEX/index.html'">Regresar ahora</button>
         <p>Tu opinión es importante para nosotros. <a href="feedback.html">Déjanos tus comentarios aquí.</a></p>
         <p>Síguenos en nuestras redes sociales:</p>
         <a href="https://facebook.com">Facebook</a> | 
