--- a/USUARIO/RESERVA/reserva.html
+++ b/USUARIO/RESERVA/reserva.html
@@ -9,7 +9,18 @@
     <script src="reserva.js" defer></script>
 </head>
 <body>
-    <div class="container">
+    <!-- Encabezado -->
+    <nav>
+        <h1><a href="#">Reservas de Canchas</a></h1>
+        <ul>
+            <li><a href="#reservar">Reservar</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+            <li><a href="#sobre">Sobre Nosotros</a></li>
+        </ul>
+    </nav>
+
+    <!-- Sección principal -->
+    <div class="container" id="reservar">
         <h1>RESERVAR CANCHA DE FÚTBOL</h1>
         <form id="reservaForm" action="http://localhost:3000/reservar" method="POST">
             <label for="fecha_entrada">FECHA</label>
@@ -33,7 +44,27 @@
 
         <div id="resultado"></div>
     </div>
+
+    <!-- Sección de contacto -->
+    <section id="contacto">
+        <h2>Contacto</h2>
+        <p>Si tienes alguna pregunta, no dudes en <a href="mailto:info@reservas.com">contactarnos</a>.</p>
+    </section>
+
+    <!-- Sección sobre nosotros -->
+    <section id="sobre">
+        <h2>Sobre Nosotros</h2>
+        <p>Somos un equipo dedicado a proporcionar las mejores instalaciones deportivas para que disfrutes de tus partidos de fútbol con amigos y familiares.</p>
+    </section>
+
+    <!-- Pie de página -->
+    <footer>
+        <p>&copy; 2024 Reservas de Canchas. Todos los derechos reservados.</p>
+        <ul>
+            <li><a href="#reservar">Reservar</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+            <li><a href="#sobre">Sobre Nosotros</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
-
-
