--- a/USUARIO/usuario.html
+++ b/USUARIO/usuario.html
@@ -14,9 +14,9 @@
         <h1><a href="index.html">SoccerBook</a></h1>
         <ul>
             <li><a href="perfil.html">PERFIL</a></li>
-            <li><a href="reserva.html">RESERVAR CANCHAS</a></li>
+            <li><a href="RESERVA/reserva.html">RESERVAR CANCHAS</a></li>
             <li><a href="mis_reservas.html">MIS RESERVAS</a></li>
-            <li><a href="logout.html"><button>CERRAR SESIÓN</button></a></li>        
+            <li><a href="LOGOUT/logout.html"><button>CERRAR SESIÓN</button></a></li>        
         </ul>
     </nav>
 
